--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-player": "^2.9.0",
     "stripe": "^8.196.0"
   },
   "devDependencies": {
