--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^1.28.5",
+    "axios": "^0.26.0",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
