--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^1.28.5",
     "axios": "^0.26.0",
+    "cookie": "^0.4.2",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
