--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@supabase/supabase-js": "^1.28.5",
     "axios": "^0.26.0",
     "cookie": "^0.4.2",
+    "micro": "^9.3.4",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
